Bug 699022 - Inform IM about cursor position when focus changes. r=masayuki

Differential Revision: https://phabricator.services.mozilla.com/D62734